<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="game_bar_enable"
        android:title="@string/game_bar_title"
        android:summary="@string/game_bar_summary"
        android:defaultValue="false" />

    <PreferenceCategory
        android:title="@string/overlay_features">

        <SwitchPreferenceCompat
            android:key="game_bar_fps_enable"
            android:title="@string/fps_overlay"
            android:summary="@string/fps_overlay_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_temp_enable"
            android:title="@string/device_temp"
            android:summary="@string/device_temp_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_usage_enable"
            android:title="@string/cpu_usage"
            android:summary="@string/cpu_usage_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_clock_enable"
            android:title="@string/cpu_clock"
            android:summary="@string/cpu_clock_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_temp_enable"
            android:title="@string/cpu_temp"
            android:summary="@string/cpu_temp_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_ram_enable"
            android:title="@string/ram_usage"
            android:summary="@string/ram_usage_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_gpu_usage_enable"
            android:title="@string/gpu_usage"
            android:summary="@string/gpu_usage_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_gpu_clock_enable"
            android:title="@string/gpu_clock"
            android:summary="@string/gpu_clock_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_gpu_temp_enable"
            android:title="@string/gpu_temp"
            android:summary="@string/gpu_temp_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="FPS Measurement Method" >

        <ListPreference
            android:key="game_bar_fps_method"
            android:title="@string/select_fps_method_title"
            android:summary="@string/select_fps_method_summary"
            android:defaultValue="new"
            android:entries="@array/game_bar_fps_method_entries"
            android:entryValues="@array/game_bar_fps_method_values" />
    </PreferenceCategory>

    <PreferenceCategory
	    android:title="@string/customization">

        <SeekBarPreference
            android:key="game_bar_text_size"
            android:title="@string/text_size"
            android:summary="@string/text_size_summary"
            android:defaultValue="16"
            android:max="32"
            android:min="12" />

        <SeekBarPreference
            android:key="game_bar_background_alpha"
            android:title="@string/background_transparency"
            android:summary="@string/background_transparency_summary"
            android:defaultValue="128"
            android:max="255"
            android:min="0" />

        <SeekBarPreference
            android:key="game_bar_corner_radius"
            android:title="@string/overlay_corner_radius"
            android:summary="@string/overlay_corner_radius_summary"
            android:defaultValue="16"
            android:max="100"
            android:min="0" />

        <SeekBarPreference
            android:key="game_bar_padding"
            android:title="@string/overlay_padding"
            android:summary="@string/overlay_padding_summary"
            android:defaultValue="12"
            android:max="64"
            android:min="0" />

        <SeekBarPreference
            android:key="game_bar_item_spacing"
            android:title="@string/item_spacing"
            android:summary="@string/item_spacing_summary"
            android:defaultValue="8"
            android:max="50"
            android:min="0" />

        <ListPreference
            android:key="game_bar_update_interval"
            android:title="@string/update_interval"
            android:summary="@string/update_interval_summary"
            android:defaultValue="1000"
            android:entries="@array/fps_overlay_update_interval_entries"
            android:entryValues="@array/fps_overlay_update_interval_values" />

        <ListPreference
            android:key="game_bar_title_color"
            android:title="@string/stat_title_color"
            android:summary="Color for 'FPS', 'Temp', 'CPU', etc. text"
            android:defaultValue="#FFFFFF"
            android:entries="@array/fps_overlay_color_entries"
            android:entryValues="@array/fps_overlay_color_values" />

        <ListPreference
            android:key="game_bar_value_color"
            android:title="@string/stat_value_color"
            android:summary="Color for numeric stats (e.g., '29', '32.0°C')"
            android:defaultValue="#4CAF50"
            android:entries="@array/fps_overlay_color_entries"
            android:entryValues="@array/fps_overlay_color_values" />

        <ListPreference
            android:key="game_bar_position"
            android:title="@string/overlay_position"
            android:summary="@string/overlay_position_summary"
            android:defaultValue="top_left"
            android:entries="@array/fps_overlay_position_entries"
            android:entryValues="@array/fps_overlay_position_values" />

        <ListPreference
            android:key="game_bar_format"
            android:title="@string/overlay_format"
            android:summary="@string/overlay_format_summary"
            android:defaultValue="full"
            android:entries="@array/game_bar_format_entries"
            android:entryValues="@array/game_bar_format_values" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/split_config"
        android:dependency="game_bar_enable">

        <ListPreference
            android:key="game_bar_split_mode"
            android:title="@string/split_mode"
            android:summary="@string/split_mode_summary"
            android:defaultValue="stacked"
            android:entries="@array/game_bar_split_mode_entries"
            android:entryValues="@array/game_bar_split_mode_values" />
    </PreferenceCategory>

    <PreferenceCategory
	android:title="@string/overlay_gesture_controls">

        <SwitchPreferenceCompat
            android:key="game_bar_single_tap_toggle"
            android:title="@string/single_tap_toggle"
            android:summary="@string/single_tap_toggle_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_doubletap_capture"
            android:title="@string/double_tap_capture"
            android:summary="@string/double_tap_capture_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_longpress_enable"
            android:title="@string/long_press_enable"
            android:summary="@string/long_press_enable_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="game_bar_longpress_timeout"
            android:title="@string/long_press_duration"
            android:summary="@string/long_press_duration_summary"
            android:defaultValue="1000"
            android:entries="@array/game_bar_longpress_entries"
            android:entryValues="@array/game_bar_longpress_values"
            android:dependency="game_bar_longpress_enable" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/capture_logs">

        <Preference
            android:key="game_bar_capture_start"
            android:title="@string/start_logging"
            android:summary="@string/start_logging_summary" />

        <Preference
            android:key="game_bar_capture_stop"
            android:title="@string/stop_logging"
            android:summary="@string/stop_logging_summary" />

        <Preference
            android:key="game_bar_capture_export"
            android:title="@string/export_log_data"
            android:summary="@string/export_log_data_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/auto_enable_game_bar">

        <SwitchPreferenceCompat
            android:key="game_bar_auto_enable"
            android:title="@string/auto_enable_title"
            android:summary="@string/auto_enable_summary"
            android:defaultValue="false" />

        <Preference
            android:key="game_bar_app_selector"
            android:title="@string/select_apps"
            android:summary="@string/select_apps_summary" />

        <Preference
            android:key="game_bar_app_remover"
            android:title="@string/remove_selected_apps"
            android:summary="@string/remove_selected_apps_summary" />
    </PreferenceCategory>

</PreferenceScreen>
